--- a/student_management_app/templates/student_management_app/demo.html
+++ b/student_management_app/templates/student_management_app/demo.html
@@ -1363,7 +1363,7 @@
 <!-- Tempusdominus Bootstrap 4 -->
 <script src="{% static 'plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js' %}"></script>
 <!-- Summernote -->
-<script src="{% static 'plugins/summernote/summernote-bs4.min.js"></script>
+<script src="{% static 'plugins/summernote/summernote-bs4.min.js' %}"></script>
 <!-- overlayScrollbars -->
 <script src="{% static 'plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js' %}"></script>
 <!-- AdminLTE App -->
