--- a/student_management_app/templates/student_management_app/login.html
+++ b/student_management_app/templates/student_management_app/login.html
@@ -1,5 +1,4 @@
-{% load static %}
-<!DOCTYPE html>
+<!DOCTYPE html>{% load static %}
 <html>
 <head>
   <meta charset="utf-8">
@@ -29,7 +28,7 @@
     <div class="card-body login-card-body">
       <p class="login-box-msg">Sign in to start your session</p>
 
-      <form action="/dblogin" method="post">
+      <form action="{% url 'dblogin' %}" method="post">
         {% csrf_token %}
         <div class="input-group mb-3">
           <input type="email" class="form-control" name="email" placeholder="Email" required>
