added redirect to admin page after login

--- a/student_management_app/templates/student_management_app/admin/base.html
+++ b/student_management_app/templates/student_management_app/admin/base.html
@@ -62,17 +62,17 @@
     </form>
 
     <!-- Right navbar links -->
-    {% include 'notification.html' %}
+    {% include 'admin/notification.html' %}
   </nav>
   <!-- /.navbar -->
 
   <!-- Main Sidebar Container -->
-  {% include 'sidebar.html' %}
+  {% include 'admin/sidebar.html' %}
 
   <!-- Content Wrapper. Contains page content -->
   <div class="content-wrapper">
     <!-- Content Header (Page header) -->
-    {% include 'header.html %}
+    {% include 'admin/header.html %}
     <!-- /.content-header -->
 
     <!-- Main content -->
