--- a/student_management_app/templates/student_management_app/admin/main_content.html
+++ b/student_management_app/templates/student_management_app/admin/main_content.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %}
+
+{% extends 'admin/base.html' %}
+{% load static %}
 {% block main_content %}
 <section class="content">
     <div class="container-fluid">
