renamed project application

--- a/main_app/templates/main_app/admin/main_content.html
+++ b/main_app/templates/main_app/admin/main_content.html
@@ -1,6 +1,6 @@
 
 {% extends 'admin/base.html' %}
-{% load static %}
+<!-- {% load static %} -->
 {% block main_content %}
 <section class="content">
     <div class="container-fluid">
