--- a/main_app/templates/main_app/admin/footer.html
+++ b/main_app/templates/main_app/admin/footer.html
@@ -1,3 +1,4 @@
+{% load static %} 
 <footer class="main-footer">
     <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">SMS</a>.</strong>
     All rights reserved.
