--- a/main_app/templates/main_app/admin/home_content.html
+++ b/main_app/templates/main_app/admin/home_content.html
@@ -1,7 +1,7 @@
+{% extends 'main_app/admin/base.html' %} 
+{% load static %} 
+{% block content %}
 
-{% extends 'admin/base.html' %}
-<!-- {% load static %} -->
-{% block main_content %}
 <section class="content">
     <div class="container-fluid">
       <!-- Small boxes (Stat box) -->
@@ -589,4 +589,4 @@
       <!-- /.row (main row) -->
     </div><!-- /.container-fluid -->
   </section>
-  {% endblock main_content %}
+  {% endblock content %}
