--- a/main_app/templates/main_app/admin/base.html
+++ b/main_app/templates/main_app/admin/base.html
@@ -32,62 +32,62 @@
   {% endblock custom_css %}
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
-<div class="wrapper">
+  <div class="wrapper">
 
-  <!-- Navbar -->
-  <nav class="main-header navbar navbar-expand navbar-white navbar-light">
-    <!-- Left navbar links -->
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="index3.html" class="nav-link">Home</a>
-      </li>
-      <li class="nav-item d-none d-sm-inline-block">
-        <a href="#" class="nav-link">Contact</a>
-      </li>
-    </ul>
-
-    <!-- SEARCH FORM -->
-    <form class="form-inline ml-3">
-      <div class="input-group input-group-sm">
-        <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-        <div class="input-group-append">
-          <button class="btn btn-navbar" type="submit">
-            <i class="fas fa-search"></i>
-          </button>
-        </div>
+    <!-- Navbar -->
+    <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+      <!-- Left navbar links -->
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
+        </li>
+      </ul>
+      <h4 style="margin-left: 10px;margin-top: 5px;">SMS Admin Dashboard</h4>
+      <ul class="navbar-nav ml-auto">
+        <!-- Messages Dropdown Menu -->
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout' %}">
+            Logout
+          </a>
+        </li>
+      </ul>
+  
+      <!-- Right navbar links -->
+    </nav>
+    <!-- /.navbar -->
+  
+    <!-- Main Sidebar Container -->
+      {% include 'main_app/admin/sidebar.html' with user=user id=id %}
+  
+    <!-- Content Wrapper. Contains page content -->
+     <div class="content-wrapper">
+         <!-- Content Header (Page header) -->
+      <div class="content-header">
+        <div class="container-fluid">
+          <div class="row mb-2">
+            <div class="col-sm-6">
+              <h1 class="m-0 text-dark">
+                  {% block page_title %}
+                  {% endblock page_title %}
+              </h1>
+            </div><!-- /.col -->
+            <div class="col-sm-6">
+              <ol class="breadcrumb float-sm-right">
+                <li class="breadcrumb-item"><a href="{% url 'admin_dashboard' %}">Home</a></li>
+              </ol>
+            </div><!-- /.col -->
+          </div><!-- /.row -->
+        </div><!-- /.container-fluid -->
       </div>
-    </form>
-
-    <!-- Right navbar links -->
-    {% include "main_app/admin/notification.html" %}
-  </nav>
-  <!-- /.navbar -->
-
-  <!-- Main Sidebar Container -->
-  {% include 'main_app/admin/sidebar.html' %}
-
-  <!-- Content Wrapper. Contains page content -->
-  <div class="content-wrapper">
-    <!-- Content Header (Page header) -->
-    {% include 'main_app/admin/header.html' %}
-    <!-- /.content-header -->
-
-    <!-- Main content -->
-
-      {% block content %} 
-      {% endblock content %}
-
-    
-    <!-- /.content -->
+      <!-- /.content-header -->
+       {% block content %}{% endblock content %}
+  
+    </div>
+    <!-- /.content-wrapper -->
+      {% include 'main_app/admin/footer.html' %}
+  
   </div>
-  <!-- /.content-wrapper -->
-  {% include 'main_app/admin/footer.html' %}
-
-</div>
-<!-- ./wrapper -->
+  <!-- ./wrapper -->
 
 <!-- jQuery -->
 <script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
