--- a/main_app/templates/main_app/admin/sidebar.html
+++ b/main_app/templates/main_app/admin/sidebar.html
@@ -1,7 +1,7 @@
 {% load static %} 
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="/" class="brand-link">
+    <a href="/admin_dashboard" class="brand-link">
       <!-- <img src="{% static 'dist/img/logo.png' %}" alt="SMS" class="brand-image img-circle elevation-3"
            style="opacity: .8"> -->
       <span class="brand-text font-weight-light">SMS</span>
