--- a/main_app/templates/main_app/admin/footer.html
+++ b/main_app/templates/main_app/admin/footer.html
@@ -1,8 +1,7 @@
 {% load static %} 
-<footer class="main-footer">
-    <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">SMS</a>.</strong>
+<footer class="main-footer" style="text-align: center;margin-left: auto;margin-right: auto;">
+    <strong>Copyright &copy; 2023 <a href="http://adminlte.io">SMS</a>.</strong>
     All rights reserved.
     <div class="float-right d-none d-sm-inline-block">
-      <b>Version</b> 3.0.2
     </div>
   </footer>
