--- a/main_app/templates/main_app/admin/sidebar.html
+++ b/main_app/templates/main_app/admin/sidebar.html
@@ -28,6 +28,33 @@
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-edit"></i>
               <p>
+                Manage Departments
+                <i class="fas fa-angle-left right"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                <a href="/add_department" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>
+                    Add Department
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="/add_department" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>
+                    View Departments
+                  </p>
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item has-treeview">
+            <a href="#" class="nav-link">
+              <i class="nav-icon fas fa-edit"></i>
+              <p>
                 Manage Staffs
                 <i class="fas fa-angle-left right"></i>
               </p>
@@ -45,7 +72,7 @@
                 <a href="/add_staff" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>
-                    View Staff
+                    View Staffs
                   </p>
                 </a>
               </li>
