implemented creation of deparments

--- a/main_app/templates/main_app/admin/add_department.html
+++ b/main_app/templates/main_app/admin/add_department.html
@@ -23,10 +23,10 @@ Add Department
                                 {% if messages %}
                                     {% for message in messages %}
                                     {% if message.tags == 'error' %}
-                                    <div class="alert alert-danger" style="margin-top:10px">{{ message }}</div>
+                                    <div class="alert alert-danger">{{ message }}</div>
                                     {% endif %}
                                     {% if message.tags == 'success' %}
-                                    <div class="alert alert-success" style="margin-top:10px">{{ message }}</div>
+                                    <div class="alert alert-success">{{ message }}</div>
                                     {% endif %}
                                     {% endfor %}
                                 {% endif %}
@@ -34,11 +34,11 @@ Add Department
                             <div class="row">
                                 <div class="form-group col-md-12">
                                     <label>Department Name</label>
-                                    <input type="email" class="form-control" name="email" placeholder="Enter email">
+                                    <input type="text" class="form-control" name="department_name" placeholder="Enter department name">
                                 </div>   
                             </div>
                             <div class="row float-right">
-                                <div class="form-group ">
+                                <div class="form-group">
                                     <button type="submit" class="btn btn-primary btn-block">Save</button>
                                 </div>
                             </div>
