--- a/main_app/templates/main_app/admin/add_staff.html
+++ b/main_app/templates/main_app/admin/add_staff.html
@@ -58,6 +58,15 @@ Add Staff
                                     <label>Address</label>
                                     <input type="text" class="form-control" placeholder="Address" name="address">
                                 </div>
+                                <div class="form-group col-md-6">
+                                    <label>Department</label>
+                                    <select name="department" id="department" class="form-control">
+                                        <option value="">Select Department...</option>
+                                        {% for department in departments %}
+                                        <option value="{{department.id}}">{{department.department_name}}</option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
     
                             </div>
                         </div>
