--- a/main_app/templates/main_app/admin/sidebar.html
+++ b/main_app/templates/main_app/admin/sidebar.html
@@ -115,7 +115,7 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="/add_staff" class="nav-link">
+                <a href="/add_course" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>
                     Add Course
