added page,url for displaying list of departments

--- a/main_app/templates/main_app/admin/sidebar.html
+++ b/main_app/templates/main_app/admin/sidebar.html
@@ -42,7 +42,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="/add_department" class="nav-link">
+                <a href="/view_departments" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>
                     View Departments
