path for view students

--- a/main_app/templates/main_app/admin/sidebar.html
+++ b/main_app/templates/main_app/admin/sidebar.html
@@ -96,7 +96,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="/add_staff" class="nav-link">
+                <a href="/view_student" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>
                     View Students
