--- a/main_app/templates/main_app/admin/view_students.html
+++ b/main_app/templates/main_app/admin/view_students.html
@@ -28,7 +28,8 @@ List of Students
                 <table class="table table-hover text-nowrap">
                     <thead>
                     <tr>
-                        <th>ID</th>
+                        <th>#</th>
+                        <th>Student ID</th>
                         <th>First Name</th>
                         <th>Last Name</th>
                         <th>User Name</th>
@@ -41,7 +42,8 @@ List of Students
                     <tbody>
                     {% for student in students %}
                     <tr>
-                        <td>{{ student.admin.id }}</td>
+                        <td>{{ student.id }}</td>
+                        <td>{{ student.student_id }}</td>
                         <td>{{ student.admin.first_name }}</td>
                         <td>{{ student.admin.last_name }}</td>
                         <td>{{ student.admin.username }}</td>
