--- a/main_app/templates/main_app/admin/footer.html
+++ b/main_app/templates/main_app/admin/footer.html
@@ -1,6 +1,6 @@
 {% load static %} 
 <footer class="main-footer" style="text-align: center;margin-left: auto;margin-right: auto;">
-    <strong>Copyright &copy; 2023 <a href="http://adminlte.io">SMS</a>.</strong>
+    <strong>Copyright &copy; 2023 <a href="{% url 'admin_dashboard' %}">SMS</a>.</strong>
     All rights reserved.
     <div class="float-right d-none d-sm-inline-block">
     </div>
