--- a/main_app/templates/main_app/admin/view_staffs.html
+++ b/main_app/templates/main_app/admin/view_staffs.html
@@ -1,6 +1,6 @@
 {% extends 'main_app/admin/base.html' %}
 {% block page_title %}
-List of Staffs
+Staffs
 {% endblock page_title %}
 
 {% block content %}
@@ -9,25 +9,15 @@ List of Staffs
     <div class="container-fluid">
 
 
-         <div class="row">
+      <div class="row">
         <div class="col-12">
-          <div class="card">
+          <div class="card card-primary">
             <div class="card-header">
               <h3 class="card-title">Staff Details</h3>
-
-              <div class="card-tools">
-                <div class="input-group input-group-sm" style="width: 150px;">
-                  <input type="text" name="table_search" class="form-control float-right" placeholder="Search">
-
-                  <div class="input-group-append">
-                    <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
-                  </div>
-                </div>
-              </div>
-            </div>
+            </div><br>
             <!-- /.card-header -->
-            <div class="card-body table-responsive p-0">
-              <table class="table table-hover text-nowrap">
+            <div class="card-body table-responsive">
+              <table class="table table-bordered table-hover" id="example2">
                 <thead>
                   <tr>
                     <th>ID</th>
