--- a/main_app/templates/main_app/students/student_sidebar.html
+++ b/main_app/templates/main_app/students/student_sidebar.html
@@ -33,6 +33,14 @@
               </p>
             </a>
           </li>
+          <li class="nav-item">
+            <a href="{% url 'view_staff' %}" class="nav-link">
+              <i class="nav-icon fas fa-th"></i>
+              <p>
+                Staff
+              </p>
+            </a>
+          </li>
         </ul>
       </nav>
       <!-- /.sidebar-menu -->
