added staff create schedules and view appointments

--- a/main_app/templates/main_app/students/lectures.html
+++ b/main_app/templates/main_app/students/lectures.html
@@ -1,9 +1,9 @@
-{% extends 'main_app/admin/base.html' %}
+{% extends 'main_app/students/base.html' %}
 {% block page_title %}
 Staffs
 {% endblock page_title %}
 
-{% block content %}
+{% block main_content %}
  <!-- Main content -->
  <section class="content">
     <div class="container-fluid">
@@ -13,7 +13,7 @@ Staffs
         <div class="col-12">
           <div class="card card-primary">
             <div class="card-header">
-              <h3 class="card-title">Staff Details</h3>
+              <h3 class="card-title">Available Staffs</h3>
             </div><br>
             <!-- /.card-header -->
             <div class="card-body table-responsive">
@@ -54,4 +54,4 @@ Staffs
     </div>
   </section>
   <!-- /.content -->
-{% endblock content %}
+{% endblock main_content %}
