--- a/main_app/templates/main_app/staffs/staff_panel.html
+++ b/main_app/templates/main_app/staffs/staff_panel.html
@@ -6,6 +6,60 @@ Home
     <!-- Main content -->
     <section class="content">
       <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <div class="card card-primary">
+              <div class="card-header">
+                <h3 class="card-title">Appointments</h3>
+              </div><br>
+              <!-- /.card-header -->
+              <div class="card-body table-responsive">
+                <table class="table table-bordered table-hover" id="example2">
+                  <thead>
+                    <tr>
+                      <th>ID</th>
+                      <th>Student Id</th>
+                      <th>Email</th>
+                      <th>Program</th>
+                      <th>Course</th>  
+                      <th>Department</th>
+                      <th>Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                  
+                    <tr>
+                      <td>1</td>
+                      <td>2020-08-01456</td>
+                      <td>abc@gmail.com</td>
+                      <td>Bsc in Computer Science</td>
+                      <td>Digital Electronics</td>
+                      <td>Electronics and Telecommunication</td>
+                      <td>
+                        <a href="#" class="btn btn-success btn-sm"><i class="fa fa-check"></i></a>
+                        <a href="#" class="btn btn-danger btn-sm"><i class="fa fa-window-close"></i></a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>2</td>
+                      <td>2020-08-01456</td>
+                      <td>abc@gmail.com</td>
+                      <td>Bsc in Computer Engineering</td>
+                      <td>Networking</td>
+                      <td>Computer Engineering Technology</td>
+                      <td>
+                        <a href="#" class="btn btn-success btn-sm"><i class="fa fa-check"></i></a>
+                        <a href="#" class="btn btn-danger btn-sm"><i class="fa fa-window-close"></i></a>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+              <!-- /.card-body -->
+            </div>
+            <!-- /.card -->
+          </div>
+        </div>
       </div>
     </section>
     <!-- /.content -->
