--- a/main_app/templates/main_app/staffs/staff_sidebar.html
+++ b/main_app/templates/main_app/staffs/staff_sidebar.html
@@ -25,11 +25,20 @@
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
           <li class="nav-item">
-            {% url 'staff_home' as staff_home %}
-            <a href="{{ staff_home }}" class="nav-link {% if request.path == staff_home %} active {% endif %}">
+            {% url 'staff_panel' as staff_panel %}
+            <a href="{{staff_panel}}" class="nav-link {% if request.path == staff_panel %} active {% endif %}">
               <i class="nav-icon fas fa-th"></i>
               <p>
                 Home
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
+            {% url 'create_schedule' as create_schedule %}
+            <a href="{% url 'create_schedule' %}" class="nav-link {% if request.path == create_schedule %} active {% endif %}">
+              <i class="nav-icon fas fa-th"></i>
+              <p>
+                Schedule
               </p>
             </a>
           </li>
