updated lectures panel

--- a/main_app/templates/main_app/staffs/staff_panel.html
+++ b/main_app/templates/main_app/staffs/staff_panel.html
@@ -7,58 +7,51 @@ Home
     <section class="content">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-12">
-            <div class="card card-primary">
-              <div class="card-header">
-                <h3 class="card-title">Appointments</h3>
-              </div><br>
-              <!-- /.card-header -->
-              <div class="card-body table-responsive">
-                <table class="table table-bordered table-hover" id="example2">
-                  <thead>
-                    <tr>
-                      <th>ID</th>
-                      <th>Student Id</th>
-                      <th>Email</th>
-                      <th>Program</th>
-                      <th>Course</th>  
-                      <th>Department</th>
-                      <th>Action</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                  
-                    <tr>
-                      <td>1</td>
-                      <td>2020-08-01456</td>
-                      <td>abc@gmail.com</td>
-                      <td>Bsc in Computer Science</td>
-                      <td>Digital Electronics</td>
-                      <td>Electronics and Telecommunication</td>
-                      <td>
-                        <a href="#" class="btn btn-success btn-sm"><i class="fa fa-check"></i></a>
-                        <a href="#" class="btn btn-danger btn-sm"><i class="fa fa-window-close"></i></a>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td>2</td>
-                      <td>2020-08-01456</td>
-                      <td>abc@gmail.com</td>
-                      <td>Bsc in Computer Engineering</td>
-                      <td>Networking</td>
-                      <td>Computer Engineering Technology</td>
-                      <td>
-                        <a href="#" class="btn btn-success btn-sm"><i class="fa fa-check"></i></a>
-                        <a href="#" class="btn btn-danger btn-sm"><i class="fa fa-window-close"></i></a>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
+          <div class="col-lg-4 col-6">
+            <!-- small box -->
+            <div class="small-box bg-info">
+              <div class="inner">
+                <h3>150</h3>
+
+                <p>Total Appointments</p>
               </div>
-              <!-- /.card-body -->
+              <div class="icon">
+                <i class="ion ion-bag"></i>
+              </div>
+              <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
             </div>
-            <!-- /.card -->
           </div>
+          <!-- ./col -->
+          <div class="col-lg-4 col-6">
+            <!-- small box -->
+            <div class="small-box bg-success">
+              <div class="inner">
+                <h3>53<sup style="font-size: 20px">%</sup></h3>
+
+                <p>Today Appointments</p>
+              </div>
+              <div class="icon">
+                <i class="ion ion-stats-bars"></i>
+              </div>
+              <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+            </div>
+          </div>
+          <!-- ./col -->
+          <div class="col-lg-4 col-6">
+            <!-- small box -->
+            <div class="small-box bg-warning">
+              <div class="inner">
+                <h3>44</h3>
+
+                <p>New Appointments</p>
+              </div>
+              <div class="icon">
+                <i class="ion ion-person-add"></i>
+              </div>
+              <a href="#" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+            </div>
+          </div>
+          <!-- ./col -->
         </div>
       </div>
     </section>
