--- a/main_app/templates/main_app/staffs/staff_schedule.html
+++ b/main_app/templates/main_app/staffs/staff_schedule.html
@@ -1,6 +1,6 @@
 {% extends 'main_app/staffs/base.html' %}
 {% block page_title %}
-Create Schedule
+Schedule Time Slots
 {% endblock page_title %}
 {% block main_content %}
 
@@ -12,7 +12,7 @@ Create Schedule
                 <!-- general form elements -->
                 <div class="card card-primary">
                     <div class="card-header">
-                        <h3 class="card-title">Open Schedule</h3>
+                        <h3 class="card-title">Add Time Slots</h3>
                         <div class="form-group col-md-6">
                             {% if messages %}
                                 {% for message in messages %}
@@ -32,15 +32,6 @@ Create Schedule
                         {% csrf_token %}
                         <div class="card-body">
                             <div class="row">
-                                <div class="form-group col-md-6">
-                                    <label>Block</label>
-                                    <input type="text" class="form-control" name="block_name" placeholder="Enter block">
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label>Office No</label>
-                                    <input type="text" class="form-control" name="office_no" placeholder="Enter office">
-                                </div>
-                                
                                 <div class="form-group col-md-6">
                                     <label>Schedule Date</label>
                                     <input type="date" class="form-control" placeholder="Date" name="schedule_date">
