--- a/main_app/templates/main_app/staffs/staff_schedule.html
+++ b/main_app/templates/main_app/staffs/staff_schedule.html
@@ -28,31 +28,8 @@ Schedule Time Slots
                     </div>
                     <!-- /.card-header -->
                     <!-- form start -->
-                    <form role="form" action="/add_student_save" method="post">
-                        {% csrf_token %}
-                        <div class="card-body">
-                            <div class="row">
-                                <div class="form-group col-md-6">
-                                    <label>Schedule Date</label>
-                                    <input type="date" class="form-control" placeholder="Date" name="schedule_date">
-                                </div>
-                                
-                                <div class="form-group col-md-6">
-                                    <label>Schedule Time Start</label>
-                                    <input type="text" class="form-control" placeholder="eg 3pm, 5pm" name="from_time">
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label>Schedule Time End</label>
-                                    <input type="text" class="form-control" placeholder="eg 3pm, 5pm" name="to_time">
-                                </div>
-                            </div>
-                        </div>
-                        <!-- /.card-body -->
-
-                        <div class="card-footer">
-                            <button type="submit" class="btn btn-primary btn-block">Save</button>
-                        </div>
-                    </form>
+                    {% url 'add_slots_save' as action_path %}
+                    {% include 'main_app/staffs/form_template.html' with messages=messages form=form action_path=action_path button_text="Save" %}
                 </div>
                 <!-- /.card -->
             </div>
