--- a/main_app/templates/main_app/admin/sidebar.html
+++ b/main_app/templates/main_app/admin/sidebar.html
@@ -4,7 +4,7 @@
     <a href="/admin_dashboard" class="brand-link">
       <!-- <img src="{% static 'dist/img/logo.png' %}" alt="SMS" class="brand-image img-circle elevation-3"
            style="opacity: .8"> -->
-      <span class="brand-text font-weight-light">SMS</span>
+      <span class="brand-text font-weight-light">CMS</span>
     </a>
 
     <!-- Sidebar -->
@@ -24,6 +24,13 @@
         <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
+          <li class="nav-item">
+            {% url 'admin_dashboard' as admin_dashboard %}
+            <a href="{{admin_dashboard}}" class="nav-link {% if request.path == admin_dashboard %} active {% endif %}">
+              <i class="nav-icon fas fa-tachometer-alt"></i>
+                <p>Dashboard</p>
+            </a>
+          </li>
           <li class="nav-item has-treeview">
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-edit"></i>
