--- a/main_app/templates/main_app/students/lectures.html
+++ b/main_app/templates/main_app/students/lectures.html
@@ -22,7 +22,7 @@ Staffs
             <div class="icon">
               <i class="ion ion-user"></i>
             </div>
-            <a href="#" class="small-box-footer">Book Now <i class="fas fa-arrow-circle-right"></i></a>
+            <a href="/add_appointment/{{staff.admin.id}}" class="small-box-footer">Book Now <i class="fas fa-arrow-circle-right"></i></a>
           </div>
         </div>
         {% endfor %}
