--- a/main_app/templates/main_app/students/base.html
+++ b/main_app/templates/main_app/students/base.html
@@ -121,6 +121,20 @@
 <script src="{% static 'dist/js/pages/dashboard.js' %}"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="{% static 'dist/js/demo.js' %}"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+<link rel="stylesheet" href="/resources/demos/style.css">
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+<script>
+// var minDate = new Date(currentTime.getFullYear(), currentTime.getMonth(), +1); //one day next before month
+  $( function() {
+    $( "#booking_date" ).datepicker({
+      minDate: new Date(2007, 1 - 1, 1),
+      dateFormat: 'yy-mm-dd'
+    });
+  } );
+
+</script>
 
 {% block custom_js %}
 {% endblock custom_js %}
