--- a/main_app/templates/main_app/students/add_booking.html
+++ b/main_app/templates/main_app/students/add_booking.html
@@ -28,31 +28,27 @@ Book Appointment For: | {{ staff.admin.first_name }} {{ staff.admin.last_name }}
                     </div>
                     <!-- /.card-header -->
                     <!-- form start -->
-                    <form role="form" action="/add_booking_save" method="post">
-                        {% csrf_token %}
+                    <!-- <form role="form" action="/add_booking_save" method="post">
+                        {% csrf_token %} -->
                         <div class="card-body">
                             <div class="row">
-                                <input type="hidden" name="staff_id" value="{{staff.admin.id}}">                                
+                                <input type="hidden" name="staff_id" id="staff_id" value="{{staff.admin.id}}">                                
                                 <div class="form-group col-md-6">
                                     <label>Booking Date</label>
-                                    <input type="date" class="form-control" placeholder="Date" name="booking_date">
+                                    <input type="text" class="form-control" id="booking_date" placeholder="Date" name="booking_date" data-toggle="datetimepicker">
                                 </div>
-                                <div class="form-group col-md-6">
-                                    <label>Available Time Slots</label>
-                                    <select name="time_slot" id="time_slot" class="form-control">
-                                        <option value="">3 pm</option>
-                                        <option value="">6 pm</option>
-                                    </select>
-                                </div> 
+                                <div id="times" class="card-footer">
+
+                                </div>
     
                             </div>
                         </div>
                         <!-- /.card-body -->
 
                         <div class="card-footer">
-                            <button type="submit" class="btn btn-primary btn-block">Save</button>
+                            <button type="submit" id="fetch_times" class="btn btn-primary btn-block">Get Time Slots</button>
                         </div>
-                    </form>
+                    <!-- </form> -->
                 </div>
                 <!-- /.card -->
             </div>
@@ -61,4 +57,35 @@ Book Appointment For: | {{ staff.admin.first_name }} {{ staff.admin.last_name }}
 </section>
 <!-- /.content -->
   {% endblock main_content %}
+  {% block custom_js %}
+  <script>
+    $(document).ready(function(){
+        $("#booking_date").change(function(){
+           var booking_date = $("#booking_date").val()
+           var staff_id = $("#staff_id").val()
+           $.ajax({
+                url:'{% url "get_time_slots" %}',
+                type:'POST',
+                data:{staff_id:staff_id,booking_date:booking_date},
+           })
+           .done(function(response){
+            var json_data = JSON.parse(response);
+            console.log(json_data)
+                var div_data="<div class='form-group col-md-6'><label>Available Time Slots : </label><input type='text' name='time_slot' id='time_slot' class='form-control'></div><div class='form-group'><div class='row'>";
+                for(key in json_data)
+                {
+                    div_data+="<div class='col-lg-2'><div class='form-check'><input type='checkbox' checked='checked' name='times[]' value='"+json_data[key]['time']+"'><label class='form-check-label'>"+json_data[key]['time']+"</label></div></div>";
+                }
+                div_data+="</div></div>";
+               
+
+                $("#times").html(div_data);
+           })
+           .fail(function(){
+                alert("Error in Fetching time slots")
+            })
+        });
+    });
+  </script>
+  {% endblock custom_js %}
   
