--- a/main_app/templates/main_app/admin/view_students.html
+++ b/main_app/templates/main_app/admin/view_students.html
@@ -40,7 +40,7 @@ Students
                         <td>{{ student.admin.email }}</td>
                         <td>{{ student.gender }}</td>
                         <td>{{ student.program }}</td>
-                        <td><a href="/edit_student/{{ staff.admin.id }}" class="btn btn-success">Edit</a></td>
+                        <td><a href="/edit_student/{{ student.admin.id }}" class="btn btn-success">Edit</a></td>
                     </tr>
                     {% endfor %}
                     </tbody>
