--- a/main_app/templates/main_app/staffs/all_booking.html
+++ b/main_app/templates/main_app/staffs/all_booking.html
@@ -28,7 +28,7 @@ Home
                   {% for appointment in appointments %}
                     <tr>
                       <td>1</td>
-                      <td>{{appointment.student}}</td>
+                      <td>{{appointment.student.first_name}} {{appointment.student.last_name}}</td>
                       <td>{{appointment.appointment_date}}</td>
                       <td>{{appointment.appointment_time}}</td>                     
                       <td>
