--- a/main_app/templates/main_app/staffs/staff_panel.html
+++ b/main_app/templates/main_app/staffs/staff_panel.html
@@ -11,12 +11,12 @@ Home
             <!-- small box -->
             <div class="small-box bg-info">
               <div class="inner">
-                <h3>150</h3>
+                <h3>{{appointmentcount}}</h3>
 
                 <p>Total Appointments</p>
               </div>
               <div class="icon">
-                <i class="ion ion-bag"></i>
+                <i class="ion ion-stats-bars"></i>
               </div>
               <a href="{% url 'appointments' %}" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
             </div>
@@ -26,7 +26,7 @@ Home
             <!-- small box -->
             <div class="small-box bg-success">
               <div class="inner">
-                <h3>53<sup style="font-size: 20px">%</sup></h3>
+                <h3>{{todayAppointments}}</h3>
 
                 <p>Today Appointments</p>
               </div>
