--- a/main_app/templates/main_app/students/student_profile.html
+++ b/main_app/templates/main_app/students/student_profile.html
@@ -27,7 +27,7 @@ Edit Profile
               </div>
             <!-- /.card-header -->
             <!-- form start -->
-            <form role="form" action="{% url 'staff_profile_save' %}" method="post">
+            <form role="form" action="{% url 'student_profile_save' %}" method="post">
                 {% csrf_token %}
               <div class="card-body">
                 <div class="form-group">
