get staff name to students panel

--- a/main_app/templates/main_app/students/student_panel.html
+++ b/main_app/templates/main_app/students/student_panel.html
@@ -28,7 +28,7 @@ Home
                     <tr>
                       <td>{{ appointment.appointment_date }}</td>
                       <td>{{ appointment.appointment_time }}</td>
-                      <td>{{ appointment.staffId }}</td>
+                      <td>{{ appointment.staff_name }}</td>
                       <td>
                         {% if appointment.status == 1 %}
                         <a href="" class="btn btn-success btn-sm">Accepted</i></a>
