--- a/main_app/templates/main_app/admin/sidebar.html
+++ b/main_app/templates/main_app/admin/sidebar.html
@@ -64,6 +64,35 @@
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-edit"></i>
               <p>
+                Manage Offices
+                <i class="fas fa-angle-left right"></i>
+              </p>
+            </a>
+            <ul class="nav nav-treeview">
+              <li class="nav-item">
+                {% url 'add_office' as add_office %}
+                <a href="{% url 'add_office' %}" class="nav-link {% if request.path == add_office %} active {% endif %}">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>
+                    Add Office
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
+                {% url 'view_offices' as view_offices %}
+                <a href="{% url 'view_offices' %}" class="nav-link {% if request.path == view_offices %} active {% endif %}">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>
+                    View Offices
+                  </p>
+                </a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-item has-treeview">
+            <a href="#" class="nav-link">
+              <i class="nav-icon fas fa-edit"></i>
+              <p>
                 Manage Departments
                 <i class="fas fa-angle-left right"></i>
               </p>
