functionality for adding office no to the database

--- a/main_app/templates/main_app/admin/add_office.html
+++ b/main_app/templates/main_app/admin/add_office.html
@@ -28,7 +28,7 @@
                     </div>
                     <!-- /.card-header -->
                     <!-- form start -->
-                    <form role="form" action="/add_block_save" method="post">
+                    <form role="form" action="/add_office_save" method="post">
                         {% csrf_token %}
                         <div class="card-body">
                             <div class="row">
