linked staff to office foreign key

--- a/main_app/templates/main_app/admin/add_staff.html
+++ b/main_app/templates/main_app/admin/add_staff.html
@@ -60,7 +60,7 @@ Add Staff
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label for="office">Office</label>
-                                    <select name="office" id="office" class="form-control">
+                                    <select name="office_number" id="office" class="form-control">
                                         {% for office in offices %}
                                         <option value="{{office.id}}">{{office.office_number}}</option>
                                         {% endfor %}
