modified list of available lectures

--- a/main_app/templates/main_app/students/lectures.html
+++ b/main_app/templates/main_app/students/lectures.html
@@ -7,26 +7,43 @@ Staffs
  <!-- Main content -->
  <section class="content">
     <div class="container-fluid">
-
-
       <div class="row">
-        {% for staff in staffs %}
-        <div class="col-lg-4 col-6">
-          <!-- small box -->
-          <div class="small-box bg-info">
-            <div class="inner">
-              <h3>{{staff.admin.first_name}} {{staff.admin.last_name}}</h3>
-
-              <p>{{staff.department.department_name}}</p>
+        <div class="col-12">
+          <div class="card card-primary">
+            <div class="card-header">
+              <h3 class="card-title">Available Lectures</h3>
+            </div><br>
+            <!-- /.card-header -->
+            <div class="card-body table-responsive">
+              <table class="table table-bordered table-hover" id="example2">
+                <thead>
+                  <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Block/Office Number</th>
+                    <th>Department</th>
+                    <th>Action</th>
+                  </tr>
+                </thead>
+                <tbody>
+                {% for staff in staffs %}
+                  <tr>
+                    <td>{{ staff.admin.first_name }}</td>
+                    <td>{{ staff.admin.last_name }}</td>
+                    <td>{{ staff.office.block.block_name }}/{{ staff.office.office_number }}</td>
+                    <td>{{ staff.department.department_name }}</td>
+                    <td><a href="/add_appointment/{{staff.admin.id}}" class="small-box-footer">Book Now <i class="fas fa-arrow-circle-right"></a></td>
+                  </tr>
+                {% endfor %}
+                </tbody>
+              </table>
             </div>
-            <div class="icon">
-              <i class="ion ion-user"></i>
-            </div>
-            <a href="/add_appointment/{{staff.admin.id}}" class="small-box-footer">Book Now <i class="fas fa-arrow-circle-right"></i></a>
+            <!-- /.card-body -->
           </div>
+          <!-- /.card -->
         </div>
-        {% endfor %}
       </div>
+
     </div>
   </section>
   <!-- /.content -->
