modified login page title

--- a/main_app/templates/main_app/login.html
+++ b/main_app/templates/main_app/login.html
@@ -21,7 +21,7 @@
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <a href="/"><b>School</b>System</a>
+    <a href="/"><b>CONSULTATION </b>SYSTEM</a>
   </div>
   <!-- /.login-logo -->
   <div class="card">
