control cache after user login

--- a/main_app/templates/main_app/admin/home_content.html
+++ b/main_app/templates/main_app/admin/home_content.html
@@ -29,7 +29,7 @@ Home
           <div class="inner">
             <h3>{{studentCount}}</h3>
 
-            <p>Today Students</p>
+            <p>Total Students</p>
           </div>
           <div class="icon">
             <i class="ion ion-person-add"></i>
